# SCEPCAL

./: README.md
Detector/SCEPCAL/compact/: SCEPCAL.xml
Detector/SCEPCALsegmentation/src/: SCEPCALSegmentation.cpp
Detector_ddsim/: CMakeLists.txt  steering.py
Detector_ddsim/compact/: SCEPCAL.xml
Detector_ddsim/src/: SCEPCALConstructor.cpp
SCEPCALsim/SCEPCALsimG4Components/test/: runSCEPCALsim.py
SCEPCALsim/SCEPCALsimG4Full/src/lib/: SimG4SCEPCALSteppingAction.cpp
